--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="<Your Cloud Name>"
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="<Your Upload Preset>"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="<Your API Key>"
-NEXT_PUBLIC_CLOUDINARY_CHURCH_FOLDER="churchfinderphdev"
+NEXT_PUBLIC_CLOUDINARY_FOLDER=""
 CLOUDINARY_API_SECRET="<Your API Secret>"
