--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev -p 3007",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.6",
@@ -51,6 +53,7 @@
     "next": "15.5.2",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
